# serializer version: 1
# name: test_light_entities[light.fanlinc_lamp-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.fanlinc_lamp',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_EE EE EE 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities[light.fanlinc_lamp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'accepted_commands': list([
        'BEEP',
        'BRT',
        'DFOF',
        'DFON',
        'DIM',
        'DOF',
        'DON',
        'FDDOWN',
        'FDSTOP',
        'FDUP',
        'OL',
        'QUERY',
        'RR',
        'WDU',
      ]),
      'accepted_commands_friendly': list([
        'Beep',
        'Brighten',
        'Dim',
        'Fade Down',
        'Fade Stop',
        'Fade Up',
        'Fast Off',
        'Fast On',
        'Off',
        'On',
        'On Level',
        'Query',
        'Ramp Rate',
        'Write Changes',
      ]),
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'FanLinc Lamp',
      'last_brightness': 255,
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.fanlinc_lamp',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_light_entities[light.hallway_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.hallway_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_AA AA AA 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities[light.hallway_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'accepted_commands': list([
        'BEEP',
        'BRT',
        'DFOF',
        'DFON',
        'DIM',
        'DOF',
        'DON',
        'FDDOWN',
        'FDSTOP',
        'FDUP',
        'OL',
        'QUERY',
        'RR',
        'WDU',
      ]),
      'accepted_commands_friendly': list([
        'Beep',
        'Brighten',
        'Dim',
        'Fade Down',
        'Fade Stop',
        'Fade Up',
        'Fast Off',
        'Fast On',
        'Off',
        'On',
        'On Level',
        'Query',
        'Ramp Rate',
        'Write Changes',
      ]),
      'brightness': 255,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Hallway Light',
      'last_brightness': 255,
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.hallway_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
